Closed Bug 754627 Opened 14 years ago Closed 14 years ago

GetBounds on bullet return wrong values

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla15

People

(Reporter: surkov, Assigned: surkov)

References

(Blocks 2 open bugs)

Details

(Keywords: access)

Attachments

(1 file)

Attached patch patchSplinter Review
No description provided.
Attachment #623470 - Flags: review?(trev.saunders)
Attachment #623470 - Flags: review?(roc)
Comment on attachment 623470 [details] [diff] [review] patch Review of attachment 623470 [details] [diff] [review]: ----------------------------------------------------------------- ::: layout/generic/nsBlockFrame.h @@ +784,5 @@ > * @return the outside bullet frame list frame property. > */ > nsFrameList* GetOutsideBulletList() const; > > +protected: I removed that locally
Summary: GetBounds on frame return wrong values → GetBounds on bullet return wrong values
Comment on attachment 623470 [details] [diff] [review] patch >+HTMLListBulletAccessible::GetFrame() const >+{ >+ nsBlockFrame* blockFrame = do_QueryFrame(mContent->GetPrimaryFrame()); >+ if (blockFrame) >+ return blockFrame->GetBullet(); shouldn't you return null if this isn't true? >+<body> >+ >+ <p id="display"></p> >+ <div id="content" style="display: none"></div> >+ <pre id="test"> >+ </pre> shouldn't there be a bug reference? r=me with those
Attachment #623470 - Flags: review?(trev.saunders) → review+
Flags: in-testsuite+
Target Milestone: --- → mozilla15
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: