Bug 754627 - GetBounds on bullet return wrong values, r=tbsaunde, roc